src/core/config/transformer/snapshots/tailcall__core__config__transformer__flatten_single_types__tests__flatten_single_types_with_resolver_transform.snap
---
source: src/core/config/transformer/flatten_single_types.rs
expression: transformed_config.to_sdl()
---
schema @server @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

type Foo {
  a: Int
}

type Query {
  foo: Foo @grpc(method: "news.NewsService.GetAllNews")
}
